fix header size on mobile

--- a/src/components/PageSections/Header/_Header.scss
+++ b/src/components/PageSections/Header/_Header.scss
@@ -207,6 +207,7 @@
 
 .coa-Header__logo {
   color: $coa-color-white;
+  font-size: $coa-base-font-size;
   font-weight: $coa-font-semibold;
   text-decoration: none;
   margin-left: auto;
